# aws-cost-reporter

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  docker-compose.yaml  get_phantomjs.py  pyproject.toml
.circleci/: config.yml
aws/policies/: billing-cost-explorer-policy.json.template
aws/rules/: lambda_schedule_trigger.yaml
pacioli/: aws.py  cli.py  collect.py  definitions.py  event_handlers.py  exceptions.py  functions.py  managers.py  post.py  settings.py
pacioli/charts/: create.py
pacioli/handlers/: events.py
pacioli/reporting/: slack.py
scripts/: get_project_details.py
tests/: test_charts_create.py  test_functions.py  test_managers_costmanager.py  test_managers_reportmanager.py  utils.py
tests/data/: collect_account_basic_account_metrics__result.json  costusage_daily_groupby_linkedaccount.json  costusage_daily_groupby_linkedaccount_firstdayofmonth.json  costusage_daily_groupby_projectid.json  costusage_daily_groupby_projectid_no_latest_project.json  costusage_daily_groupby_projectid_with_services.json  costusage_daily_groupby_projectid_with_services__single_day.json  costusage_daily_groupby_recordtype.json
